<resources>
    <string name="app_name">YourMovieBase</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="helper_email">Enter your email address</string>
    <string name="helper_password">Enter password</string>
    <string name="filler_movie_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu.</string>
    <string name="text_description">Description</string>
    <string name="filler_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacus nisi, placerat eget purus nec, gravida volutpat mauris. Etiam sapien est, tristique eu ex quis, suscipit venenatis tortor. Aenean quis risus erat. Donec vulputate tempor erat nec finibus. In blandit et metus vehicula ultricies. Nulla bibendum fringilla orci, at varius nunc eleifend ac. Phasellus semper magna eget augue tempus dictum. Proin purus odio, interdum vel risus ut, fringilla gravida arcu. Maecenas at volutpat felis. Pellentesque rhoncus mattis varius. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut in tempor est. Suspendisse sed orci vel turpis porttitor aliquet.</string>
    <string name="text_length">Length</string>
    <string name="text_age_rating">Age rating</string>
    <string name="filler_length">2h 28min</string>
    <string name="filler_age_rating">18+</string>
    <string name="text_year">Year</string>
    <string name="filler_year">2024</string>
    <string name="text_actors">Actors</string>
    <string name="filler_person_name">Matthew McConaughey</string>
    <string name="text_filters">Filters</string>
    <string name="text_genres">Genres</string>
    <string name="text_rating">Rating</string>
    <string name="text_apply">Apply</string>
    <string name="text_reset_all">Reset all</string>
    <string name="text_length_filter">Length filter</string>
    <string name="helper_length">Example: 100–120 (in minutes)</string>
    <string name="helper_year">Example: 1874, 2050, 2020–2024</string>
    <string name="text_year_filter">Year filter</string>
    <string name="description_filter">filter</string>
    <string name="util_age_rating">%1$d+</string>
    <string name="util_rating">%1$.1f/10 IMDb</string>
    <string name="util_length">%1$dh %2$dmin</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_favourite">Favourite</string>
    <string name="filler_genre">Genre</string>
    <string name="snack_user_auth_error">User authentication failed</string>
    <string name="snack_user_reg_error">User registration failed</string>
    <string name="snack_user_google_auth_error">User google authentication failed</string>
    <string name="snack_error_while_loading">Error while loading</string>
    <string name="snack_invalid_string_format">Invalid string format</string>
    <string name="snack_error_cached_genres">Error trying get cached genres</string>
    <string name="snack_error_load_genres">Error trying load genres</string>
    <string name="snack_details_load_success">Details successfully loaded</string>
    <string name="snack_details_load_error">Error while loading details</string>
    <string name="text_logout">Logout</string>
    <string name="filler_email">email@mail.com</string>
    <string name="text_profile">Profile</string>
    <string name="text_your_email">Your email</string>
</resources>