<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.FilterBottomSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        style="@style/Widget.Design.BottomSheet.Modal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingHorizontal="@dimen/padding_filters_sheet_horizontal"
        android:paddingVertical="@dimen/padding_filters_sheet_vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/dragHandle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleTextView"
            style="@style/TitleLargeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_filters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dragHandle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genreTextView"
            style="@style/BodyLargeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_genres"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genreChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/genreTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ratingTextView"
            style="@style/BodyLargeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_filter_items"
            android:text="@string/text_rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreChipGroup" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/ratingRangeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="0.1"
            android:valueFrom="0.0"
            android:valueTo="10.0"
            app:layout_constraintTop_toBottomOf="@id/ratingTextView"
            app:values="@array/init_rating_slider_values" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/yearTextView"
            style="@style/BodyLargeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_filter_items"
            android:text="@string/text_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingRangeSlider" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yearInputLayout"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_year_filter"
            app:helperText="@string/helper_year"
            app:layout_constraintTop_toBottomOf="@id/yearTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/yearEditText"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lengthTextView"
            style="@style/BodyLargeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_filter_items"
            android:text="@string/text_length"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lengthInputLayout"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_length_filter"
            app:helperText="@string/helper_length"
            app:layout_constraintTop_toBottomOf="@id/lengthTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lengthEditText"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetButton"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_filter_items"
            android:layout_marginEnd="@dimen/margin_filter_items"
            android:text="@string/text_reset_all"
            app:layout_constraintEnd_toStartOf="@id/applyButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lengthInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyButton"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_filter_items"
            android:text="@string/text_apply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/resetButton"
            app:layout_constraintTop_toTopOf="@id/resetButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>