<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.fragment.MovieDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_movie_details_appbar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/posterImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/filler_poster"
                app:layout_collapseMode="parallax" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/gradientToolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_gradient_movie_details"
                android:layout_gravity="bottom"
                android:background="@drawable/gradient_movie_details" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_movie_details">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/movieNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filler_movie_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/white"
                app:fontFamily="@font/candal"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lengthTextView"
                style="@style/SubtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_length"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieNameTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ageRatingTextView"
                style="@style/SubtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_age_rating"
                app:layout_constraintStart_toEndOf="@id/lengthTextView"
                app:layout_constraintTop_toTopOf="@id/lengthTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descriptionTitleTextView"
                style="@style/SubtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lengthTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filler_description"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/descriptionTitleTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>